force-app/main/default/objects/Product2/fields/BusinessName__c.field-meta.xml
<CustomField>
    <fullName>BusinessName__c</fullName>
    <label>Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>