force-app/main/default/objects/Product2/fields/BusinessNameEN__c.field-meta.xml
<CustomField>
    <fullName>BusinessNameEN__c</fullName>
    <label>Business Name EN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>