force-app/main/default/objects/Product2/fields/IsDefault__c.field-meta.xml
<CustomField>
    <fullName>IsDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if Product is created in SAP and is available for adding to Quote</description>
    <inlineHelpText>Determines if Product is created in SAP and is available for adding to Quote</inlineHelpText>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>