force-app/main/default/objects/Product2/fields/IsTemplateProduct__c.field-meta.xml
<CustomField>
    <fullName>IsTemplateProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Template Product</label>
    <type>Checkbox</type>
</CustomField>