force-app/main/default/objects/Product2/fields/ProductDescriptionCZ__c.field-meta.xml
<CustomField>
    <fullName>ProductDescriptionCZ__c</fullName>
    <label>Product Description CZ</label>
    <length>131000</length>
    <type>Html</type>
</CustomField>