force-app/main/default/objects/Product2/fields/ProductDescriptionEN__c.field-meta.xml
<CustomField>
    <fullName>ProductDescriptionEN__c</fullName>
    <label>Product Description EN</label>
    <length>131000</length>
    <type>Html</type>
</CustomField>