force-app/main/default/objects/Product2/fields/RequestForTechnicianId__c.field-meta.xml
<CustomField>
    <fullName>RequestForTechnicianId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request For Technician</label>
    <referenceTo>RequestForTechnician__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>