force-app/main/default/objects/Product2/fields/Specification__c.field-meta.xml
<CustomField>
    <fullName>Specification__c</fullName>
    <label>Specification</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProductSpecification</valueSetName>
    </valueSet>
</CustomField>