force-app/main/default/objects/Product2/fields/SyncStatus__c.field-meta.xml
<CustomField>
    <fullName>SyncStatus__c</fullName>
    <label>Sync Status (System)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SyncStatus</valueSetName>
    </valueSet>
</CustomField>