force-app/main/default/objects/Product2/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>M-AKU_PENA</fullName>
            </value>
            <value>
                <fullName>M-BARVY</fullName>
            </value>
            <value>
                <fullName>M-DROBNY_SPMAT</fullName>
            </value>
            <value>
                <fullName>M-ELEKTRO</fullName>
            </value>
            <value>
                <fullName>M-FUKUMA</fullName>
            </value>
            <value>
                <fullName>M-KOV</fullName>
            </value>
            <value>
                <fullName>M-KOVANI</fullName>
            </value>
            <value>
                <fullName>M-LATKA</fullName>
            </value>
            <value>
                <fullName>M-MICROOFFICE</fullName>
            </value>
            <value>
                <fullName>M-OBALY</fullName>
            </value>
            <value>
                <fullName>M-OSTATNI</fullName>
            </value>
            <value>
                <fullName>M-PLOSNY_MAT</fullName>
            </value>
            <value>
                <fullName>M-SKLO</fullName>
            </value>
            <value>
                <fullName>P-POLOTOVAR</fullName>
            </value>
            <value>
                <fullName>S-SKLADOVE SLUZBY</fullName>
            </value>
            <value>
                <fullName>S-SLUZBY</fullName>
            </value>
            <value>
                <fullName>V-VYROBEK</fullName>
            </value>
            <value>
                <fullName>Z-ZBOZI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>