force-app/main/default/objects/Product2/fields/UnitPriceCZK__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceCZK__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Unit Price CZK</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>