force-app/main/default/objects/Product2/fields/UnitPriceUSD__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceUSD__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Unit Price USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>