force-app/main/default/objects/Product2/validationRules/ProductNameShorter120.validationRule-meta.xml
<ValidationRule>
    <fullName>ProductNameShorter120</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(Name) &gt; 120</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Product Name should not exceed 120 characters.</errorMessage>
</ValidationRule>