force-app/main/default/objects/Product2/listViews/AllBundles.listView-meta.xml
<ListView>
    <fullName>AllBundles</fullName>
    <columns>SAPId__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>BusinessName__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SAPId__c</field>
        <operation>contains</operation>
        <value>NES</value>
    </filters>
    <label>All Bundles</label>
</ListView>