force-app/main/default/objects/Product2/listViews/MO.listView-meta.xml
<ListView>
    <fullName>MO</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>MICROOFFICE</value>
    </filters>
    <label>MO</label>
</ListView>