force-app/main/default/objects/Product2/listViews/Technik_View.listView-meta.xml
<ListView>
    <fullName>Technik_View</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>SAPId__c</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>UnitCost__c</columns>
    <columns>UnitPriceCZK__c</columns>
    <columns>UnitPriceEUR__c</columns>
    <columns>BusinessName__c</columns>
    <columns>BusinessNameEN__c</columns>
    <filterScope>Everything</filterScope>
    <label>Technik View</label>
</ListView>