force-app/main/default/objects/Product2/listViews/Z_ZBOZI.listView-meta.xml
<ListView>
    <fullName>Z_ZBOZI</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>SAPId__c</columns>
    <columns>UnitCost__c</columns>
    <columns>Type__c</columns>
    <columns>Specification__c</columns>
    <columns>SyncStatus__c</columns>
    <columns>UnitPriceCZK__c</columns>
    <columns>UnitPriceEUR__c</columns>
    <columns>UnitPriceUSD__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>PRODUCT2.LAST_UPDATE</columns>
    <columns>BusinessName__c</columns>
    <columns>IsDefault__c</columns>
    <filterScope>Everything</filterScope>
    <label>Z-ZBOZI</label>
</ListView>